<resources>
    <string name="app_name">My Application</string>
    <string name="product">Product</string>
    <string-array name="products_array">
        <item>Apple</item>
        <item>Orange</item>
    </string-array>
    <string name="price">Price</string>
    <string name="btn_add">Add</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="quantity">Quantity</string>
    <string name="currency"> £</string>
    <string name="apple_price">0.60 %s</string>
    <string name="orange_price">0.25 %s</string>
    <string name="apples">Apples</string>
    <string name="oranges">Oranges</string>
</resources>
